<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ActivitesFragment.Profile.Setting.PrivacyPolicySettingA">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:background="@drawable/d_bottom_gray_line"
            android:paddingStart="@dimen/_12sdp"
            android:paddingEnd="@dimen/_12sdp"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp">

            <ImageView
                android:id="@+id/PrivacyPolicySetting_F_img_back"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:scaleType="fitStart"
                android:src="@drawable/ic_back"
                app:tint="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:text="@string/privacy_policy"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold" />


        </RelativeLayout>


        <LinearLayout
            android:paddingStart="@dimen/_12sdp"
            android:paddingEnd="@dimen/_12sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_22sdp"
                android:text="@string/safety"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold" />



            <LinearLayout
                android:id="@+id/allow_download_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/allow_video_download"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11sdp" />

                <TextView
                    android:id="@+id/allow_download_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="end"
                    android:text="@string/on"
                    android:textColor="@color/lightblack"
                    android:textSize="@dimen/_11sdp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingEnd="@dimen/_32sdp"
                android:paddingStart="0dp"
                android:text="@string/choose_video_download_option"
                android:textColor="@color/gray_light"
                android:textSize="@dimen/_11sdp" />


            <LinearLayout
                android:id="@+id/allow_dmesges_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/who_can_send_you_direct_message"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11sdp" />

                <TextView
                    android:id="@+id/allow_direct_mesg_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="end"
                    android:text="@string/everyone"
                    android:textColor="@color/lightblack"
                    android:textSize="@dimen/_11sdp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingEnd="@dimen/_32sdp"
                android:paddingStart="0dp"
                android:text="@string/choose_who_can_send_you_direct_message"
                android:textColor="@color/gray_light"
                android:textSize="@dimen/_11sdp" />


            <LinearLayout
                android:id="@+id/allow_duet_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/who_can_duet_with_your_video"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11sdp" />

                <TextView
                    android:id="@+id/allow_duet_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="end"
                    android:text="@string/everyone"
                    android:textColor="@color/lightblack"
                    android:textSize="@dimen/_11sdp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingEnd="@dimen/_32sdp"
                android:paddingStart="0dp"
                android:text="@string/who_can_make_duet_video"
                android:textColor="@color/gray_light"
                android:textSize="@dimen/_11sdp" />


            <LinearLayout
                android:id="@+id/allow_view_likevid_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/who_can_view_your_liked_video"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11sdp" />

                <TextView
                    android:id="@+id/allow_view_likevid_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="end"
                    android:text="@string/everyone"
                    android:textColor="@color/lightblack"
                    android:textSize="@dimen/_11sdp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingEnd="@dimen/_32sdp"
                android:paddingStart="0dp"
                android:text="@string/choose_liked_video"
                android:textColor="@color/gray_light"
                android:textSize="@dimen/_11sdp" />


            <LinearLayout
                android:id="@+id/allow_commenet_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/who_can_comment_on_video"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11sdp" />

                <TextView
                    android:id="@+id/allow_commenet_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="end"
                    android:text="@string/everyone"
                    android:textColor="@color/lightblack"
                    android:textSize="@dimen/_11sdp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingEnd="@dimen/_32sdp"
                android:paddingStart="0dp"
                android:text="@string/choose_who_can_comment_on_video"
                android:textColor="@color/gray_light"
                android:textSize="@dimen/_11sdp" />


        </LinearLayout>

    </LinearLayout>
</ScrollView>