<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:paddingStart="@dimen/_24sdp"
    android:paddingEnd="@dimen/_24sdp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/_8sdp"
        android:paddingVertical="@dimen/_6sdp"
        android:background="@drawable/button_rounded_gray_strok_background"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="0x4fd96172C40913c8100a47337f21DBf25C9e2fC6"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        android:visibility="visible" />

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/tabBottomLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@color/graycolor" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/profile_token_video_views"
        android:textColor="@color/lightblack"
        android:textSize="@dimen/_11sdp"  />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:gravity="center"
        android:text="1000 $VIRAL"
        android:textColor="@color/black"
        android:textSize="@dimen/_17sdp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/claim_profile_btn"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_34sdp"
        android:paddingHorizontal="@dimen/_24sdp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="@dimen/_8sdp"
        android:includeFontPadding="false"
        android:background="@drawable/button_rounded_gray_strok_background"
        android:text="@string/profile_token_claim"
        android:textColor="@color/black"
        android:textSize="@dimen/_13sdp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        android:gravity="center"
        android:text="@string/profile_token_nft_collection"
        android:textColor="@color/black"
        android:textSize="@dimen/_17sdp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_token_level"
            android:textColor="@color/lightblack"
            android:textSize="@dimen/_13sdp"  />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:text="@string/profile_token_none"
            android:textColor="@color/lightblack"
            android:textSize="@dimen/_13sdp"  />

        <ImageView
            android:id="@+id/favBtn"
            android:layout_width="@dimen/_14sdp"
            android:layout_height="@dimen/_14sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:src="@drawable/ic_info" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/profile_token_number"
        android:textColor="@color/lightblack"
        android:textSize="@dimen/_13sdp"  />

    <TextView
        android:id="@+id/market_profile_btn"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_34sdp"
        android:paddingHorizontal="@dimen/_24sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/_8sdp"
        android:includeFontPadding="false"
        android:background="@drawable/button_rounded_gray_strok_background"
        android:text="@string/profile_token_nft_market"
        android:textColor="@color/black"
        android:textSize="@dimen/_13sdp"
        android:textStyle="bold" />

</LinearLayout>